--- a/index.html
+++ b/index.html
@@ -76,26 +76,17 @@
       </div>
 
       <div class="offcanvas-body">
-        <ul class="list-group mb-3">
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Fender Stratocaster® H.E.R. Limited Edition
-            <span class="badge bg-primary rounded-pill">$1,299</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Gibson Les Paul Standard
-            <span class="badge bg-primary rounded-pill">$2,499</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Yamaha Pacifica 112V
-            <span class="badge bg-primary rounded-pill">$399</span>
-          </li>
+        <p>Your order summary:</p>
+        <ul class="list-group mb-3" id="summary">
+          <li
+            class="list-group-item d-flex justify-content-between align-items-center"
+          ></li>
+          <div
+            class="d-flex justify-content-between align-items-center mb-3"
+          ></div>
         </ul>
-        <div class="d-flex justify-content-between align-items-center mb-3">
-          <strong>Total</strong>
-          <span class="badge bg-success rounded-pill">$4,197</span>
-        </div>
-        </ul>
-
+        <strong>Total</strong>
+        <span class="badge bg-success rounded-pill" id="cart-total">$0</span>
         <hr />
         <button class="btn btn-primary w-100">Pay</button>
       </div>
@@ -128,14 +119,14 @@
                       Guitar
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Electric Guitar</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#"
-                          >Something else here</a
-                        >
+                        <a class="dropdown-item" href="#">Acustic Guitar</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Famous Guitar</a>
                       </li>
                     </ul>
                   </div>
@@ -237,6 +228,7 @@
                     sound and exceptional playability for musicians of all
                     levels. levels.
                   </p>
+                  <button id="buttonCart4" value="cod78">Add Cart</button>
                   <ul class="list-group"></ul>
                 </div>
               </div>
@@ -264,6 +256,7 @@
                     sound and exceptional playability for musicians of all
                     levels. levels.
                   </p>
+                  <button id="buttonCart3" value="cod56">Add Cart</button>
                   <ul class="list-group"></ul>
                 </div>
               </div>
@@ -291,6 +284,7 @@
                     sound and exceptional playability for musicians of all
                     levels. levels.
                   </p>
+                  <button id="buttonCart2" value="cod34">Add Cart</button>
                   <ul class="list-group"></ul>
                 </div>
               </div>
@@ -318,6 +312,7 @@
                     sound and exceptional playability for musicians of all
                     levels. levels.
                   </p>
+                  <button id="buttonCart1" value="cod12">Add Cart</button>
                   <ul class="list-group"></ul>
                 </div>
               </div>
@@ -336,5 +331,6 @@
         </div>
       </div>
     </footer>
+    <script src="asset/js/script.js"></script>
   </body>
 </html>
