--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- CONTENIDO PRINCIPAL -->
     <div class="container-fluid">
       <div class="row bg-info text-white p-3 mb-0">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg w-100">
           <div class="container-fluid">
             <button
               class="navbar-toggler"
@@ -135,17 +135,17 @@
                       href="#"
                       style="background-color: rgb(13, 202, 240)"
                     >
-                      Guitar
+                      Drums
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Electronic Drums</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#"
-                          >Something else here</a
-                        >
+                        <a class="dropdown-item" href="#">Jazz Drums</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Rock Drums</a>
                       </li>
                     </ul>
                   </div>
@@ -158,17 +158,21 @@
                       href="#"
                       style="background-color: rgb(13, 202, 240)"
                     >
-                      Guitar
+                      Microphones
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#"
+                          >Wireless Microphones</a
+                        >
                       </li>
                       <li>
                         <a class="dropdown-item" href="#"
-                          >Something else here</a
+                          >Standard Microphones</a
                         >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Studio Microphones</a>
                       </li>
                     </ul>
                   </div>
@@ -181,16 +185,20 @@
                       href="#"
                       style="background-color: rgb(13, 202, 240)"
                     >
-                      Guitar
+                      Keyboards
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#"
+                          >Classical Keyboards</a
+                        >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Modern Keyboards</a>
                       </li>
                       <li>
                         <a class="dropdown-item" href="#"
-                          >Something else here</a
+                          >Synthesizer Keyboards</a
                         >
                       </li>
                     </ul>
@@ -202,116 +210,131 @@
         </nav>
       </div>
 
-      <div class="row">
-        <div class="col-md-3">
-          <div class="row p-3">
-            <div class="container">
-              <div class="row">
-                <div class="col-12 text-center">
-                  <img
-                    src="/asset/images/products/g1.png"
-                    alt="Logo"
-                    style="width: 100px; height: auto"
-                  />
-                  <h2 class="product-title">
-                    Fender Stratocaster® H.E.R. Limited Edition
-                  </h2>
-                  <p class="description product-description">
-                    The Fender Stratocaster® H.E.R. Limited Edition features a
-                    stunning Blue Marlin finish, signature Fender tone, and
-                    premium hardware. Designed in collaboration with
-                    Grammy-winning artist H.E.R., this guitar offers versatile
-                    sound and exceptional playability for musicians of all
-                    levels. levels.
-                  </p>
-                  <button id="buttonCart4" value="cod78">Add Cart</button>
-                  <ul class="list-group"></ul>
-                </div>
-              </div>
+      <div class="row justify-content-center">
+        <div class="col-md-3 d-flex align-items-stretch">
+          <div class="card w-100 p-3">
+            <div class="text-center" id="image-product">
+              <img
+                src="/asset/images/products/g4.png"
+                alt="Logo"
+                style="width: 100px; height: auto"
+              />
+            </div>
+            <div class="text-center">
+              <h2 class="product-title">
+                Hayden HY-12 wireless Microphone System UHF, 200ft
+              </h2>
+              <p class="description product-description">
+                The Hayden HY-12 wireless microphone system offers clear audio
+                quality and reliable performance for live events and
+                presentations. With a range of up to 200 feet, it provides
+                freedom of movement and ease of use. Ideal for singers,
+                speakers, and performers seeking professional sound without the
+                hassle of cables.
+              </p>
+            </div>
+            <div class="text-center">
+              <button
+                id="buttonCart4"
+                value="cod78"
+                class="btn btn-warning mt-2"
+              >
+                Add Cart
+              </button>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="row p-3">
-            <div class="container">
-              <div class="row">
-                <div class="col-12 text-center">
-                  <img
-                    src="/asset/images/products/g1.png"
-                    alt="Logo"
-                    style="width: 100px; height: auto"
-                  />
-                  <h2 class="product-title">
-                    Fender Stratocaster® H.E.R. Limited Edition
-                  </h2>
-                  <p class="description product-description">
-                    The Fender Stratocaster® H.E.R. Limited Edition features a
-                    stunning Blue Marlin finish, signature Fender tone, and
-                    premium hardware. Designed in collaboration with
-                    Grammy-winning artist H.E.R., this guitar offers versatile
-                    sound and exceptional playability for musicians of all
-                    levels. levels.
-                  </p>
-                  <button id="buttonCart3" value="cod56">Add Cart</button>
-                  <ul class="list-group"></ul>
-                </div>
-              </div>
+        <div class="col-md-3 d-flex align-items-stretch">
+          <div class="card w-100 p-3">
+            <div class="text-center" id="image-product">
+              <img
+                src="/asset/images/products/g3.png"
+                alt="Logo"
+                style="width: 100px; height: auto; margin-top: 45px"
+              />
+            </div>
+            <div class="text-center">
+              <h2 class="product-title">Keyboard Yamaha PSR-E373</h2>
+              <p class="description product-description">
+                The Yamaha PSR-E373 is a versatile keyboard perfect for
+                beginners and intermediate players. It features 622 voices, 205
+                styles, and a range of educational functions to help you learn
+                and grow as a musician. With its touch-sensitive keys and
+                built-in effects, the PSR-E373 delivers expressive performances
+                across various musical genres.
+              </p>
+            </div>
+            <div class="text-center">
+              <button
+                id="buttonCart3"
+                value="cod56"
+                class="btn btn-warning mt-2"
+              >
+                Add Cart
+              </button>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="row p-3">
-            <div class="container">
-              <div class="row">
-                <div class="col-12 text-center">
-                  <img
-                    src="/asset/images/products/g1.png"
-                    alt="Logo"
-                    style="width: 100px; height: auto"
-                  />
-                  <h2 class="product-title">
-                    Fender Stratocaster® H.E.R. Limited Edition
-                  </h2>
-                  <p class="description product-description">
-                    The Fender Stratocaster® H.E.R. Limited Edition features a
-                    stunning Blue Marlin finish, signature Fender tone, and
-                    premium hardware. Designed in collaboration with
-                    Grammy-winning artist H.E.R., this guitar offers versatile
-                    sound and exceptional playability for musicians of all
-                    levels. levels.
-                  </p>
-                  <button id="buttonCart2" value="cod34">Add Cart</button>
-                  <ul class="list-group"></ul>
-                </div>
-              </div>
+        <div class="col-md-3 d-flex align-items-stretch">
+          <div class="card w-100 p-3">
+            <div class="text-center" id="image-product">
+              <img
+                src="/asset/images/products/g2.png"
+                alt="Logo"
+                style="width: 200px; height: auto"
+              />
+            </div>
+            <div class="text-center">
+              <h2 class="product-title">Drum Set Maple Complete 5 Pieces</h2>
+              <p class="description product-description">
+                This drum set features high-quality maple shells, responsive
+                hardware, and versatile cymbals. Perfect for beginners and
+                professionals alike, it delivers powerful sound and durability
+                for live performances and studio recordings.
+                <br /><br />
+                <br /><br />
+              </p>
+            </div>
+            <div class="text-center">
+              <button
+                id="buttonCart2"
+                value="cod34"
+                class="btn btn-warning mt-2"
+              >
+                Add Cart
+              </button>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="row p-3">
-            <div class="container">
-              <div class="row">
-                <div class="col-12 text-center">
-                  <img
-                    src="/asset/images/products/g1.png"
-                    alt="Logo"
-                    style="width: 100px; height: auto"
-                  />
-                  <h2 class="product-title">
-                    Fender Stratocaster® H.E.R. Limited Edition
-                  </h2>
-                  <p class="description product-description">
-                    The Fender Stratocaster® H.E.R. Limited Edition features a
-                    stunning Blue Marlin finish, signature Fender tone, and
-                    premium hardware. Designed in collaboration with
-                    Grammy-winning artist H.E.R., this guitar offers versatile
-                    sound and exceptional playability for musicians of all
-                    levels. levels.
-                  </p>
-                  <button id="buttonCart1" value="cod12">Add Cart</button>
-                  <ul class="list-group"></ul>
-                </div>
-              </div>
+        <div class="col-md-3 d-flex align-items-stretch">
+          <div class="card w-100 p-3">
+            <div class="text-center" id="image-product">
+              <img
+                src="/asset/images/products/g1c.png"
+                alt="Logo"
+                style="width: 90px; height: auto"
+              />
+            </div>
+            <div class="text-center mt-5">
+              <h2 class="product-title">
+                Fender Stratocaster® H.E.R. Limited Edition
+              </h2>
+              <p class="description product-description">
+                The Fender Stratocaster® H.E.R. Limited Edition features a
+                stunning Blue Marlin finish, signature Fender tone, and premium
+                hardware. Designed in collaboration with Grammy-winning artist
+                H.E.R., this guitar offers versatile sound and exceptional
+                playability for musicians of all levels. levels.
+              </p>
+            </div>
+            <div class="text-center">
+              <button
+                id="buttonCart1"
+                value="cod12"
+                class="btn btn-warning mt-2"
+              >
+                Add Cart
+              </button>
             </div>
           </div>
         </div>
