--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       >
         ☰ Cart
       </button>
+      <a href="#" id="aboutUs" class="btn btn-light ms-2">About Us</a>
     </div>
 
     <!-- OFFCANVAS DERECHO -->
@@ -346,6 +347,15 @@
         <div class="row">
           <div class="col-12 bg-dark text-white p-3 mt-0">
             <p class="text-center mb-0">© 2025 Music Store</p>
+            <p class="text-center mb-0">
+              123 Broadway, New York, NY &mdash;
+              <a
+                href="https://www.google.com/maps?q=123+Broadway,+New+York,+NY"
+                target="_blank"
+                class="text-info text-decoration-underline"
+                >View on Google Maps</a
+              >
+            </p>
           </div>
         </div>
       </div>
